# graphite

./: .gitignore  .markdownlint.yaml  Cargo.toml  GRC-draft.md  IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md  book.toml  build-wasm.sh  rfc-rust-subgraph.md
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml
benchmarks/: COMPARISON.md  results.md
benchmarks/as-erc20/: package.json  subgraph.yaml
benchmarks/as-erc20/src/: mapping.ts
docs/: README.md  SUMMARY.md  getting-started.md
docs/advanced/: README.md  contract-calls.md  crypto.md  dynamic-data-sources.md  file-handlers.md  multi-source.md
docs/cli/: README.md  commands.md  graphite-toml.md
docs/concepts/: README.md  entities.md  event-context.md  handlers.md  primitives.md  testing.md
docs/examples/: README.md  erc1155.md  erc20.md  erc721.md  file-ds.md  uniswap-v2.md
docs/getting-started/: README.md  first-subgraph.md  installation.md  project-structure.md
examples/erc1155/: Cargo.toml  graphite.toml  schema.graphql  subgraph.yaml
examples/erc1155/abis/: ERC1155.json
examples/erc1155/src/: lib.rs
examples/erc20/: Cargo.toml  README.md  deploy-schema.graphql  deploy-subgraph.yaml  erc20.wasm  graphite.toml  schema-live.graphql  schema.graphql  subgraph-live.yaml  subgraph.yaml
examples/erc20/src/: lib.rs
examples/erc721/: Cargo.toml  README.md  graphite.toml  schema.graphql  subgraph.yaml
examples/erc721/src/: lib.rs
examples/file-ds/: Cargo.toml  graphite.toml  schema.graphql  subgraph.yaml
examples/file-ds/abis/: ERC721.json
examples/file-ds/src/: lib.rs
examples/milestone/: Cargo.toml  schema.graphql  subgraph.yaml
examples/milestone/abis/: Dummy.json
examples/milestone/src/: lib.rs
examples/multi-source/: Cargo.toml  graphite.toml  schema.graphql  subgraph.yaml
examples/multi-source/abis/: ERC20.json  ERC721.json
examples/multi-source/src/: lib.rs
examples/uniswap-v2/: Cargo.toml  graphite.toml  schema.graphql  subgraph.yaml
examples/uniswap-v2/abis/: Factory.json
examples/uniswap-v2/src/: lib.rs
graph-as-runtime/: Cargo.toml
graph-as-runtime/src/: alloc_impl.rs  as_types.rs  class_ids.rs  entity.rs  ethereum.rs  ffi.rs  json.rs  lib.rs  native_store.rs  panic_handler.rs  store_read.rs
graphite/: Cargo.toml  README.md
graphite-cli/: Cargo.toml
graphite-cli/src/: deploy.rs  main.rs  manifest.rs
graphite-cli/src/codegen/: abi.rs  mod.rs  schema.rs
graphite-macros/: Cargo.toml
graphite-macros/src/: lib.rs
graphite/src/: abi_vectors_tests.rs  call.rs  crypto.rs  data_source.rs  decode.rs  ens.rs  ethereum.rs  host.rs  json.rs  lib.rs  mock.rs  primitives.rs  store.rs  testing.rs
graphite/src/testing/: mock_host.rs
graphite/src/wasm/: alloc.rs  codec.rs  ffi.rs  host.rs  mod.rs  panic.rs
graphite/tests/: entity_derive.rs
scripts/: live-test.sh
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: wasm_handler.rs
