[workspace]
resolver = "2"
members = ["graphite", "graphite-macros", "graphite-cli", "examples/erc20"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/graphite"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
graphite = { path = "graphite" }
graphite-macros = { path = "graphite-macros" }

# Ethereum primitives (alloy ecosystem)
alloy-primitives = { version = "0.8", default-features = false }
alloy-sol-types = { version = "0.8", default-features = false }
alloy-json-abi = { version = "0.8" }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"

# Arbitrary precision numbers
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }

# Proc macro utilities
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Testing
proptest = "1.5"
insta = { version = "1.40", features = ["json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
hex = "0.4"
heck = "0.5"
toml = "0.8"
graphql-parser = "0.4"
