[workspace]
resolver = "2"
members = ["graphite", "graphite-macros", "graphite-cli", "graph-as-runtime", "examples/erc20", "examples/erc721", "examples/milestone", "examples/multi-source", "examples/erc1155", "examples/file-ds", "examples/uniswap-v2"]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cargopete/graphite"
homepage = "https://github.com/cargopete/graphite"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates — version required for crates.io publishing
graphite = { package = "graphite-sdk", path = "graphite", version = "1.0.0" }
graphite-macros = { path = "graphite-macros", version = "1.0.0" }
graph-as-runtime = { path = "graph-as-runtime", version = "1.0.0" }

# Ethereum primitives (alloy ecosystem)
alloy-primitives = { version = "0.8", default-features = false }
alloy-sol-types = { version = "0.8", default-features = false }
alloy-json-abi = { version = "0.8" }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"

# Arbitrary precision numbers
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }

# Proc macro utilities
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Testing
proptest = "1.5"
insta = { version = "1.40", features = ["json"] }

# Error handling
thiserror = { version = "2.0", default-features = false }
anyhow = "1.0"

# Crypto
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }

# Utilities
hex = "0.4"
heck = "0.5"
toml = "0.8"
graphql-parser = "0.4"
ureq = { version = "3", features = ["json"] }
serde_yaml = "0.9"
notify = "6"

[profile.release]
panic = "abort"
lto = "fat"
opt-level = "z"
codegen-units = 1
strip = true
