[package]
name = "graph-as-runtime"
description = "AssemblyScript ABI layer for graph-node compatibility — no_std WASM runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# This crate is WASM-only; it has no native target use case.
# Build with: cargo build --target wasm32-unknown-unknown

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# No std dependencies — everything is no_std + alloc

