[package]
name = "graphite-cli"
description = "CLI tooling for Graphite subgraphs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "graphite"
path = "src/main.rs"

[dependencies]
graphite = { workspace = true }
clap = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
alloy-json-abi = { workspace = true }
heck = { workspace = true }
toml = { workspace = true }
graphql-parser = { workspace = true }
