[package]
name = "graphite-cli"
description = "CLI tooling for Graphite subgraphs — codegen, build, deploy"
version = "1.0.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["graph", "subgraph", "ethereum", "cli", "codegen"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "graphite"
path = "src/main.rs"

[dependencies]
graphite = { workspace = true }
clap = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
alloy-json-abi = { workspace = true }
heck = { workspace = true }
toml = { workspace = true }
graphql-parser = { workspace = true }
ureq = { workspace = true }
serde_yaml = { workspace = true }
notify = { workspace = true }
