[package]
name = "graphite-sdk"
description = "Rust SDK for building subgraphs on The Graph — write handlers in Rust, deploy to graph-node"
version = "1.0.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["graph", "subgraph", "ethereum", "blockchain", "indexing"]
categories = ["api-bindings", "wasm", "development-tools"]
readme = "README.md"

[lib]
name = "graphite"

[features]
default = ["std"]
std = ["alloy-primitives/std", "num-bigint/std", "serde/std"]
wasm = []  # Enable when compiling to WASM target

[dependencies]
graphite-macros = { workspace = true }
graph-as-runtime = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
k256 = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
hex = { workspace = true }
