[package]
name = "erc20-subgraph"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
graph-as-runtime = { path = "../../graph-as-runtime" }

# graphite SDK is used for native (non-WASM) builds and tests only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
graphite = { package = "graphite-sdk", path = "../../graphite" }
