[package]
name = "erc721-subgraph"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
graph-as-runtime = { path = "../../graph-as-runtime" }

[dev-dependencies]
graphite = { path = "../../graphite" }

[profile.release]
panic = "abort"
lto = "fat"
opt-level = "z"
codegen-units = 1
strip = true
