[package]
name = "file-ds-subgraph"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
graphite = { package = "graphite-sdk", path = "../../graphite" }
graphite-macros = { path = "../../graphite-macros" }
graph-as-runtime = { path = "../../graph-as-runtime" }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
