[package]
name = "multi-source-subgraph"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
graph-as-runtime = { path = "../../graph-as-runtime" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
graphite = { package = "graphite-sdk", path = "../../graphite" }
