[package]
name = "uniswap-v2"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
graphite = { package = "graphite-sdk", path = "../../graphite", default-features = false }
graphite-macros.workspace = true
graph-as-runtime.workspace = true

[dev-dependencies]
graphite = { package = "graphite-sdk", path = "../../graphite", features = ["std"] }
